--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,9 +30,12 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Acceuil</a>
                     </li>
+
+                    {% for category in allCategories %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="{{ path('app_category', {slug: category.slug})}}">{{ category.name }}</a>
                     </li>
+                    {% endfor %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
@@ -46,7 +49,11 @@
                     {% else %}
                         <a href="{{ path('app_login')}}"><i data-feather="user"></i>Connexion</a>
                     {% endif %}
-                    <a href=""><i data-feather="shopping-cart"></i></a>
+                    <a href="{{ path('app_cart')}}"><i data-feather="shopping-cart"></i>
+                          <span class="badge text-bg-light">
+                             {{fullCartQuantity}}
+                         </span>
+                    </a>
                 </div>
             </div>
         </div>
