--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -44,7 +44,7 @@
                          <span> {{totalWt | price }}</span>   
                     </div>
                     <div class="mt-4">
-                        <a href class="btn btn-success w-100">Commander</a>
+                        <a href="{{ path('app_order')}}" class="btn btn-success w-100">Commander</a>
                     </div>
                 </div>
                
