--- a/templates/account/_menu.html.twig
+++ b/templates/account/_menu.html.twig
@@ -3,7 +3,7 @@
     <a class="nav-link"  href="{{ path ('app_account')}}">Mes Commandes</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Mes Adresses</a>
+    <a class="nav-link"   href="{{ path ('app_account_adresses')}}">Mes Adresses</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{{ path ('app_account_modify_pwd')}}">Modifier mon mot de passe</a>
